@@ -1,6 +1,6 @@
 #
 # Example filter for (for example) a mail server
-# $Id: example.filter,v 1.2 2001/10/04 14:02:43 matthew Exp $
+# $Id: example.filter,v 1.3 2001/10/06 19:07:17 matthew Exp $
 #
 
 # Unfortunately, we don't have time to audit the
@@ -16,18 +16,18 @@ input eth0 {
 		# We don't answer this, but don't want to
 		# cause timeouts by blocking it
 		dport auth reject;
-		drop;
+		log drop;
 	};
 	# We don't run any UDP (or other non-TCP)
 	# services
-	drop;
+	log drop;
 };
 output eth0 {
 	proto tcp {
 		dport { smtp auth } accept;
-		drop;
+		log drop;
 	};
 	# Outbound DNS is OK
 	proto udp dport domain dest { ns0 ns1 } accept;
-	drop;
+	log drop;
 };
